--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
           <p class="mb-5">Eu tenho experiência em desenvolvimento web a mais de 5 anos, com código ágeis para fornecer uma sinopse robusta para visões gerais de alto nível. Abordagens iterativas à estratégia corporativa promovem o pensamento colaborativo para promover a proposta de valor geral..</p>
           <ul class="list-inline list-social-icons mb-0">
             <li class="list-inline-item">
-              <a href="https://www.facebook.com/andersonsalgado">
+              <a target='_bank' href="https://www.facebook.com/andersonsalgado">
                 <span class="fa-stack fa-lg">
                   <i class="fa fa-circle fa-stack-2x"></i>
                   <i class="fa fa-facebook fa-stack-1x fa-inverse"></i>
@@ -82,7 +82,7 @@
               </a>
             </li>
             <li class="list-inline-item">
-              <a href="https://www.linkedin.com/in/anderson-salgado-faustinoanderson57-65846577/">
+              <a target='_bank' href="https://www.linkedin.com/in/anderson-salgado-faustinoanderson57-65846577/">
                 <span class="fa-stack fa-lg">
                   <i class="fa fa-circle fa-stack-2x"></i>
                   <i class="fa fa-twitter fa-stack-1x fa-inverse"></i>
@@ -116,30 +116,30 @@
           <div class="resume-item d-flex flex-column flex-md-row mb-5">
             <div class="resume-content mr-auto">
               <h3 class="mb-0">Desenvolvedor Web</h3>
-              <div class="subheading mb-3">SOLUÇÕES INTELITEC</div>
-              <p>Traga para a mesa estratégias de sobrevivência ganha-ganha para garantir a dominação proativa. No final do dia, daqui para frente, um novo normal que evoluiu da geração X está na pista rumo a uma solução simplificada de nuvem. O conteúdo gerado pelo usuário em tempo real terá múltiplos pontos de contato para o offshoring. </p>
+              <div class="subheading mb-3">Jc Perfuração</div>
+              <p>Na jc perfuração, fazia todo trabalho web, criação de layout usando gimp, criação de email marketing, criação de peças como banner slides, Tinha clientes que comprava o produtor eu fazia toda criação web, como estratégia email marketing e sites, também na jc fiz desenvolvimento de sistema de estoque, aumentei as vendas de 3 maquinas por mês para 12 maquinas ao mês.</p>
             </div>
             <div class="resume-date text-md-right">
-              <span class="text-primary">March 2018 - Present</span>
+              <span class="text-primary">Março 2016 - Dezembro 2017</span>
             </div>
           </div>
 
           <div class="resume-item d-flex flex-column flex-md-row mb-5">
             <div class="resume-content mr-auto">
               <h3 class="mb-0">DESENVOLVEDOR WEB</h3>
-              <div class="subheading mb-3">SOLUÇÕES INTELITEC</div>
-              <p>Capitalize na baixa pendurado frutas para identificar uma atividade de valor agregado ballpark para teste beta. Substitua a divisão digital por cliques adicionais do DevOps. A imersão da nanotecnologia ao longo da rodovia da informação fechará o loop ao se concentrar apenas na linha inferior.</p>
+              <div class="subheading mb-3">Jc perfuração</div>
+              <p>A Search digital é um site de marketing digital com ela pegou alguns jobs de desenvolvimento, como criação de blog criação de sites simples ao complexos.</p>
             </div>
             <div class="resume-date text-md-right">
-              <span class="text-primary">December 2011 - March 2013</span>
+              <span class="text-primary">Abril 2015 - Junho 2016</span>
             </div>
           </div>
 
           <div class="resume-item d-flex flex-column flex-md-row mb-5">
             <div class="resume-content mr-auto">
-              <h3 class="mb-0">DESIGNER WEB JÚNIOR</h3>
-              <div class="subheading mb-3">GRITAR! MEDIA PRODUCTIONS</div>
-              <p>Administrar de forma colaborativa mercados capacitados por meio de redes plug-and-play. Adiar dinamicamente os usuários B2C após os benefícios da base instalada. Visualize drasticamente a convergência direcionada ao cliente sem um ROI revolucionário.</p>
+              <h3 class="mb-0">Back office n°2</h3>
+              <div class="subheading mb-3">Teltelematica</div>
+              <p>Analista técnico suporte netfone por telefone com datar center embrtel fazendo analize do sistema analize da região que contem dificuldade</p>
             </div>
             <div class="resume-date text-md-right">
               <span class="text-primary">July 2010 - December 2011</span>
@@ -148,12 +148,12 @@
 
           <div class="resume-item d-flex flex-column flex-md-row">
             <div class="resume-content mr-auto">
-              <h3 class="mb-0">Web Design Intern</h3>
-              <div class="subheading mb-3">Shout! Media Productions</div>
-              <p>Collaboratively administrate empowered markets via plug-and-play networks. Dynamically procrastinate B2C users after installed base benefits. Dramatically visualize customer directed convergence without revolutionary ROI.</p>
+              <h3 class="mb-0">service desk</h3>
+              <div class="subheading mb-3">IT2b</div>
+              <p>Ofereciar suporte para clientes da rede vivo, abertura de chamado configuração de rede linux e windows mode 3g.</p>
             </div>
             <div class="resume-date text-md-right">
-              <span class="text-primary">September 2008 - June 2010</span>
+              <span class="text-primary">Outubro 2010 - Abril 2011</span>
             </div>
           </div>
 
@@ -167,24 +167,34 @@
 
           <div class="resume-item d-flex flex-column flex-md-row mb-5">
             <div class="resume-content mr-auto">
-              <h3 class="mb-0">UNIVERSIDADE DO COLORADO BOULDER</h3>
-              <div class="subheading mb-3">BACHAREL DE CIÊNCIA</div>
-              <div>Computer Science - Web Development Track</div>
+              <h3 class="mb-0">Google Academy</h3>
+              <div class="subheading mb-3">Profissionalizante em Google Analyticys</div>
+              <div>Google Analytics Academy em São Paulo</div>
               <p>GPA: 3.23</p>
             </div>
             <div class="resume-date text-md-right">
-              <span class="text-primary">August 2006 - May 2010</span>
+              <span class="text-primary">Agosto 2017 - Agosto 2017</span>
             </div>
           </div>
 
           <div class="resume-item d-flex flex-column flex-md-row">
             <div class="resume-content mr-auto">
-              <h3 class="mb-0">JAMES BUCHANAN HIGH SCHOOL</h3>
-              <div class="subheading mb-3">PROGRAMA MAGNET MAGNET</div>
+              <h3 class="mb-0">Profissionalizante em PHP e MySQL </h3>
+              <div class="subheading mb-3">Curso-Online em São Paulo</div>
               <p>GPA: 3.56</p>
             </div>
             <div class="resume-date text-md-right">
-              <span class="text-primary">August 2002 - May 2006</span>
+              <span class="text-primary">Abril 2015 - outubro 2015</span>
+            </div>
+          </div>
+          <div class="resume-item d-flex flex-column flex-md-row">
+            <div class="resume-content mr-auto">
+              <h3 class="mb-0">Curso Técnico em Informática para internet</h3>
+              <div class="subheading mb-3">Faculdade Sumaré</div>
+              <p>GPA: 3.56</p>
+            </div>
+            <div class="resume-date text-md-right">
+              <span class="text-primary">outubro 2014 - fevereiro 2015</span>
             </div>
           </div>
 
@@ -269,26 +279,7 @@
               <i class="fa-li fa fa-trophy text-warning"></i>
               Especialista na Web móvel - Certificação do Google</li>
             <li>
-              <i class="fa-li fa fa-trophy text-warning"></i>
-              1<sup>st</sup>
-              Place - University of Colorado Boulder - Emerging Tech Competition 2009</li>
-            <li>
-              <i class="fa-li fa fa-trophy text-warning"></i>
-              1<sup>st</sup>
-              Place - University of Colorado Boulder - Adobe Creative Jam 2008 (UI Design Category)</li>
-            <li>
-              <i class="fa-li fa fa-trophy text-warning"></i>
-              2<sup>nd</sup>
-              Place - University of Colorado Boulder - Emerging Tech Competition 2008</li>
-            <li>
-            <li>
-              <i class="fa-li fa fa-trophy text-warning"></i>
-              1<sup>st</sup>
-              Place - James Buchanan High School - Hackathon 2006</li>
-            <li>
-              <i class="fa-li fa fa-trophy text-warning"></i>
-              3<sup>rd</sup>
-              Place - James Buchanan High School - Hackathon 2005</li>
+
           </ul>
         </div>
       </section>
